# mlgidDETECT

./: README.md  conda_cpu.yaml  conda_gpu.yaml  detr.yaml  dino.yaml  faster_rcnn.yaml  main.py  mlgidDETECT_tutorial.ipynb  pyproject.toml  setup_cuda.py
.github/workflows/: python-package.yml
mlgiddetect/configuration/: configuration.py
mlgiddetect/dataloader/: __init__.py  fromdisk.py  imgcontainer.py  labeleddataset.py  pygidloader.py  pygidloader_labeled.py
mlgiddetect/evaluation/: __init__.py  evaluation.py  matchers.py  metrics.py  on_dataset.py
mlgiddetect/export/: __init__.py  h5.py  logexport.py  plot.py
mlgiddetect/inference/: __init__.py  inference.py  tta_inference.py
mlgiddetect/postprocessing/: __init__.py  faster_rcnn.py  geometry.py  postprocessing.py  utils.py
mlgiddetect/postprocessing/fitting/: background.py  fit.py  functions.py
mlgiddetect/preprocessing/: __init__.py  contrast_correction.py  geometry.py  img_utils.py  preprocessing.py
mlgiddetect/utils/: __init__.py  misc.py  path_utils.py
setup/: conda_cpu.yaml  conda_gpu.yaml  conda_gpu_old_glib.yaml  setup_cuda.py
